--- a/package.json
+++ b/package.json
@@ -3,13 +3,22 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@testing-library/jest-dom": "^5.11.6",
-    "@testing-library/react": "^11.2.2",
-    "@testing-library/user-event": "^12.6.0",
-    "react": "^17.0.1",
-    "react-dom": "^17.0.1",
-    "react-scripts": "4.0.1",
-    "web-vitals": "^0.2.4"
+    "@testing-library/jest-dom": "^4.2.4",
+    "@testing-library/react": "^9.3.2",
+    "@testing-library/user-event": "^7.1.2",
+    "bootstrap": "^4.5.3",
+    "firebase": "^8.1.2",
+    "react": "^16.13.0",
+    "react-bootstrap": "^1.4.0",
+    "react-dom": "^16.13.0",
+    "react-redux": "^7.1.3",
+    "react-redux-firebase": "^3.1.1",
+    "react-router-dom": "^5.1.2",
+    "react-scripts": "^4.0.1",
+    "redux": "^4.0.5",
+    "redux-firestore": "^0.12.0",
+    "redux-thunk": "^2.3.0",
+    "styled-components": "^5.2.1"
   },
   "scripts": {
     "start": "react-scripts start",
