--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "react": "^16.13.0",
     "react-bootstrap": "^1.4.0",
     "react-dom": "^16.13.0",
+    "react-modal": "^3.12.1",
     "react-redux": "^7.1.3",
     "react-redux-firebase": "^3.1.1",
     "react-router-dom": "^5.1.2",
